<resources>
    <string name="app_name">中国制造网</string>
    <string name="cancel">取消</string>
    <string name="loading">加载中......</string>
    <string name="update_not_have_msg">发现新版本可以下载和安装</string>
    <string name="latest_version">你已经安装了最新版本</string>
    <string name="update_failed">检查更新失败，请稍后重试</string>
    <string name="login_user_hint">邮箱/会员登录名</string>
    <string name="login_password_hint">密码</string>
    <string name="sign_in">登录</string>
    <string name="login_input_error">请输入账号和密码</string>
    <string name="login_password_too_short">密码长度应大于6个字符</string>
    <string name="login_successful">登录成功</string>
    <string name="home_bottom_title1">业务中心</string>
    <string name="home_bottom_title2">发现</string>
    <string name="home_bottom_title3">消息</string>
    <string name="confirm">确定</string>
    <string name="call">拨打</string>
    <string name="exit_dialog_msg">确定退出吗？</string>
    <string name="signout_dialog_msg">你确认要退出当前账号吗？</string>
    <string name="inquiry_name">询盘管理</string>
    <string name="purchase_name">买家采购</string>
    <string name="unread_inquiry">未读询盘</string>
    <string name="unoffer_purchase">待报价</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_more_pull_label">拉动加载更多</string>
    <string name="pull_to_more_release_label">松开加载更多</string>
    <string name="setting_personal">个人资料</string>
    <string name="setting_undisturb">夜间免打扰</string>
    <string name="setting_undisturb_explain">系统将自动屏蔽23:00 &#8211; 08:00间的任何提醒</string>
    <string name="setting_broadcast_msg">消息通知</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_update_status_new">发现新版本</string>
    <string name="setting_update_status">V</string>
    <string name="setting_aboutus">关于我们</string>
    <string name="setting_service">联系客服</string>
    <string name="setting_apply_service">服务推荐</string>
    <string name="setting_call_service_tel">400&#8211;671&#8211;7777</string>
    <string name="setting_apply_service_tel">400&#8211;6777&#8211;600</string>
    <string name="setting_call_service_code">你的服务代码：</string>
    <string name="setting_call_service_time">服务时间\n工作日：9:00 &#8211; 18:00\n节假日：9:00 &#8211; 17:00</string>
    <string name="setting_apply_service_time">服务时间\n工作日：9:00 &#8211; 17:30</string>
    <string name="setting_signout">退出登录</string>
    <string name="setting">设置</string>
    <string name="personal_name">会员姓名</string>
    <string name="personal_member">登录账号</string>
    <string name="personal_status">会员身份</string>
    <string name="personal_tag">会员标示</string>
    <string name="personal_level">会员级别</string>
    <string name="personal_service">会员服务</string>
    <string name="setting_disturb">免打扰设置</string>
    <string name="setting_disturb_start">开始时间</string>
    <string name="setting_disturb_end">结束时间</string>
    <string name="setting_notify">消息通知</string>
    <string name="setting_notify_content">提醒的内容</string>
    <string name="setting_notify_inquiry">询盘消息</string>
    <string name="setting_notify_inquiry_explain">动态、及时、准确的买家询盘消息提醒</string>
    <string name="setting_notify_purchase">采购消息</string>
    <string name="setting_notify_purchase_explain">优质采购消息推荐，第一时间把握商机</string>
    <string name="setting_notify_service">服务消息</string>
    <string name="hello">你好，</string>
    <string name="see_purchase">看看有没有新采购</string>
    <string name="apply_as_supplier">申请认证供应商</string>
    <string name="see_all_service">查看全部</string>
    <string name="service_type">服务类型</string>
    <string name="service_date">服务日期</string>
    <string name="free_supplier">免费会员</string>
    <string name="gold_supplier">金牌会员</string>
    <string name="cooperate_supplier">合作会员</string>
    <string name="higher_supplier">认证供应商</string>
    <string name="operation_manager">管理员</string>
    <string name="operation_general">业务员</string>
    <string name="feedback_type_select">请选择反馈类型</string>
    <string name="feedback_type1">功能缺失</string>
    <string name="feedback_type2">使用不便</string>
    <string name="feedback_type3">程序错误</string>
    <string name="feedback_type4">其他</string>
    <string name="feedback_name_hint">请留下姓名</string>
    <string name="feedback_telelphone_hint">请留下电话号码/邮箱，我们会尽快跟你联系</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_content_hint">你的意见对于我们改进产品非常重要，我们期待你的意见</string>
    <string name="feedback_success">你的反馈我们已收到，非常感谢！</string>
    <string name="broadcast_from">你有一封询盘来自</string>
    <string name="broadcast_purchase_recommend">优质采购需求推荐</string>
    <string name="broadcast_detail">查看详情</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="service_consult">服务咨询</string>
    <string name="guide_start">立即体验</string>
    <string name="copyright_left">Copyright\u0020©\u00201996-</string>
    <string name="copyright_right">\u0020焦点科技股份有限公司\u0020版权所有</string>
    <string name="discovery404">抱歉！数据请求失败，请重试</string>
    <string name="message">询盘</string>
    <string name="message_reply">回复</string>
    <string name="message_send">发件箱</string>
    <string name="message_inbox">收件箱</string>
    <string name="message_shortcut">快捷回复</string>
    <string name="message_reply_inquiry">回复询盘</string>
    <string name="message_undistributed">未分配</string>
    <string name="message_distributed">已分配</string>
    <string name="message_all">全部</string>
    <string name="refresh_success">加载成功</string>
    <string name="mic_loading">正在加载…</string>
    <string name="mic_last_updated">最近更新时间:</string>
    <string name="mic_show_only_unread">只显示未读</string>
    <string name="message_make_sure_to_delect">你确定要删除所选询盘吗？</string>
    <string name="message_contacts_make_sure_to_delect">你确定要删除所选联系人吗？</string>
    <string name="message_make_sure_to_delect_success">删除成功</string>
    <string name="message_make_sure_to_delect_failed">删除失败</string>
    <string name="message_distribute">分配</string>
    <string name="message_delect">删除</string>
    <string name="message_delect_success">删除成功</string>
    <string name="message_delect_failed">删除失败</string>
    <string name="message_add_success">添加成功</string>
    <string name="message_add_failed">添加失败</string>
    <string name="message_detail_sender">发件人：</string>
    <string name="message_detail_sender_location">发件人所在地：</string>
    <string name="message_detail_ip">IP：</string>
    <string name="message_detail_receiver">收件人：</string>
    <string name="message_detail_user_behavior_record">买家行为记录</string>
    <string name="message_detail_interest_product">I’m  interested in your</string>
    <string name="message_detail_myself">我</string>
    <string name="message_sent_attachment_choose_from_Gallery">从手机相册选择</string>
    <string name="message_sent_attachment_take_photos">拍摄</string>
    <string name="message_sent_attachment_limitation">附件大小请控制在2M以内。</string>
    <string name="message_sent_upload_file_false">上传附件失败。</string>
    <string name="message_sent_content_hint">最多输入4000个字符</string>
    <string name="message_sent_loading">正在发送...</string>
    <string name="message_sent_distributing">正在分配...</string>
    <string name="message_adding">正在发送添加请求...</string>
    <string name="message_deleting">正在删除...</string>
    <string name="message_sent_success">发送成功。</string>
    <string name="message_sent_failed">发送失败。</string>
    <string name="message_sent_back">提醒：离开当前页面，丢失内容及附件。</string>
    <string name="message_subject_isempty">请输入邮件主题。</string>
    <string name="message_content_isempty">请输入邮件内容。</string>
    <string name="message_allocation_title">选择要分配的业务员</string>
    <string name="message_allocation_success">询盘已分配！</string>
    <string name="message_allocation_failed">抱歉！询盘分配失败，请重试。</string>
    <string name="message_allocation_unselected">你未选择业务员。</string>
    <string name="message_allocation_current_select">当前分配</string>
    <string name="message_list_empty">暂无相关数据</string>
    <string name="message_short_cut_list_empty">暂无相关快捷短语</string>
    <string name="message_contacts_list_empty">暂无联系人</string>
    <string name="message_behavior_list_empty">暂无相关来往记录</string>
    <string name="message_see_purchase">新采购</string>
    <string name="message_see_purchase_prefixion">暂无询盘，看看有没有</string>
    <string name="message_reply_limit">最多输入4000个字符。</string>
    <string name="message_save">保存</string>
    <string name="message_add_shortcut">添加短语</string>
    <string name="message_short_cut_default_First">Thank you for your inquiry.I’ll respond to you later.</string>
    <string name="message_short_cut_default_Second">Thanks for your inquiry. Please inform us the product specification (product name) for the quote.</string>
    <string name="message_short_cut_default_Third">Thanks for your inquiry. We are checking the price now and you’ll get the quote immediately once we finish it.</string>
    <string name="message_short_cut_delect">确定删除这条快捷短语?</string>
    <string name="message_short_cut">快捷回复</string>
    <string name="message_short_cut_num_limit">快捷短语的数量已经达到最大值(15)。</string>
    <string name="message_short_cut_words_limit">请控制在400个字符以内</string>
    <string name="message_short_cut_exist">当前快捷短语已存在</string>
    <string name="message_short_cut_save_success">快捷短语保存成功</string>
    <string name="message_short_cut_save_failed">快捷短语保存失败</string>
    <string name="pull_up_to_see_product_description">Pull Up to See Product Description</string>
    <string name="no_more_data">No More Information</string>
    <string name="pull_down_to_see_product_details">Pull Down to See Product Details</string>
    <string name="pull_down_to_return_to_homepage">Pull Down to Return to Homepage</string>
    <string name="product_order_unit">Min.Order/(%1$s):</string>
    <string name="basic_info">Basic Info</string>
    <string name="additional_info">Additional Info</string>
    <string name="member_since">Member Since:%1$s</string>
    <string name="negotiable">Negotiable</string>
    <string name="related_products_from_this_supplier">Related Products from This Supplier</string>
    <string name="safe_image_msg">Turn off “Safe Image Display”for Image viewing if you are above 18</string>
    <string name="min_order">Min.Order:\u0020</string>
    <string name="trade_terms">Trade Terms:\u0020</string>
    <string name="product_detail_title_name">产品详情页</string>
    <string name="product_detail_empty">暂无相关产品信息</string>
    <string name="product_detail_empty_toast">未找到相关产品信息</string>
    <string name="message_contacts_name">买家通讯录</string>
    <string name="message_contacts_empty">暂无联系人</string>
    <string name="message_contacts_content_default">N/A</string>
    <string name="md_behavior_record_buy_info">买家信息</string>
    <string name="md_behavior_record_buy_behavior">买家最近行为</string>
    <string name="md_behavior_record_correspondence">往来询盘</string>
    <string name="message_make_sure_to_delect_contacts">你确定要删除当前联系人么？</string>
    <string name="md_behavior_record_xml_com">公司</string>
    <string name="md_behavior_record_xml_tel">电话</string>
    <string name="md_behavior_record_xml_fax">传真</string>
    <string name="md_behavior_record_xml_email">邮箱</string>
    <string name="md_behavior_record_xml_homepage">网址</string>
    <string name="md_behavior_record_xml_content_default">N/A</string>
    <string name="recommended">Recommended</string>
    <string name="expireddate">Expired Date:</string>
    <string name="quoteleft">Quote Left:</string>
    <string name="companyname_zh">公司名称：</string>
    <string name="quoteuser_zh">采购人：</string>
    <string name="expireddate_zh">失效日期：</string>
    <string name="receiveddate_zh">接收日期：</string>
    <string name="managernoquotationtip">没有已经报价的采购需求，去</string>
    <string name="buyerpurchasechannel">买家采购频道</string>
    <string name="havealook">看看</string>
    <string name="no_related_data">暂无相关数据</string>
</resources>