<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:page="http://schemas.android.com/apk/res/com.micen.suppliers"
    style="@style/BaseLayout"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <com.micen.suppliers.view.PageStatusView
        android:id="@+id/broadcast_page_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        page:pageStatusLinkText="@string/buyerpurchasechannel"
        page:pageStatusLinkTextImg="@drawable/ic_data_purchase"
        page:pageStatusLinkTextprefixion="@string/managernoquotationtip"
        page:pageStatusLinkTextsuffix="@string/havealook"
        page:pageStatusLogo="@drawable/ic_data_empty"
        page:pageStatusText="@string/no_related_data" />

    <com.micen.suppliers.view.SearchListProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.focustech.common.widget.PagerSlidingTabStrip
        android:id="@+id/quotationi_management_tabPagerSlidingTabStrip"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/color_0088F0"
        android:textColor="@color/color_ffffff"
        android:textSize="15sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/quotationi_management_containViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>