<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_f2f2f2"
                android:orientation="vertical"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/feedback_type_select" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <CheckBox
                        android:id="@+id/cb_feedback_reason_function"
                        style="@style/FeedBackCheckBox"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/feedback_type1" />

                    <CheckBox
                        android:id="@+id/cb_feedback_reason_use"
                        style="@style/FeedBackCheckBox"
                        android:layout_centerInParent="true"
                        android:text="@string/feedback_type2" />

                    <CheckBox
                        android:id="@+id/cb_feedback_reason_exception"
                        style="@style/FeedBackCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/feedback_type3" />
                </RelativeLayout>

                <CheckBox
                    android:id="@+id/cb_feedback_reason_other"
                    style="@style/FeedBackCheckBox"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/feedback_type4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line" />

            <EditText
                android:id="@+id/et_feedback_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/feedback_name_hint"
                android:maxLength="10"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line" />

            <EditText
                android:id="@+id/et_feedback_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/feedback_telelphone_hint"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/feedback_content"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_feedback_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/transparent"
                android:gravity="left|top"
                android:hint="@string/feedback_content_hint"
                android:maxLength="300"
                android:minLines="3"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>